crates/nash-codegen/src/program/snapshots/nash_codegen__program__tests__comptime_reports_open_terms_errors_and_nonconstants.snap
---
source: crates/nash-codegen/src/program/tests.rs
expression: "comptime::eval_closed(&a, &[], fail).unwrap_err().to_string()"
---
comptime evaluation failed: ExplicitErrorTerm
traces: x
