crates/nash-codegen/src/program/snapshots/nash_codegen__program__tests__optimizer_substitution_preserves_free_names_at_runtime.snap
---
source: crates/nash-codegen/src/program/tests.rs
expression: "format!(\"{}\\n--- isolated pass\\n--- Core before substitution\\n{}\\n--- UPLC before substitution\\n{}\\n--- Core after substitution\\n{}\\n--- UPLC after substitution\\n{}\",\nprepared.snapshot(), nash_ir::pretty::pretty(reference),\npretty::term(original_program.named), nash_ir::pretty::pretty(candidate),\npretty::term(changed_program.named),)"
---
--- unoptimized Core
let y#1 : int = 20 in
let target#2 : int = y#1 in
let y#1 : int = 10 in
addInteger target#2 y#1
--- unoptimized UPLC
(program 1.1.0
  [(lam y_1
    [(lam target_2
      [(lam y_1 [[(builtin addInteger) target_2] y_1]) (con integer 10)])
      y_1])
    (con integer 20)])
--- optimized Core
30
--- optimized UPLC
(program 1.1.0 (con integer 30))
--- isolated pass
--- Core before substitution
let y#1 : int = 20 in
let target#2 : int = y#1 in
let y#1 : int = 10 in
addInteger target#2 y#1
--- UPLC before substitution
[(lam y_1
  [(lam target_2
    [(lam y_1 [[(builtin addInteger) target_2] y_1]) (con integer 10)])
    y_1])
  (con integer 20)]
--- Core after substitution
let y#1 : int = 20 in
let y#3 : int = 10 in
addInteger y#1 y#3
--- UPLC after substitution
[(lam y_1 [(lam y_3 [[(builtin addInteger) y_1] y_3]) (con integer 10)])
  (con integer 20)]
